# sdk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  NOTICE  README.md  codecov.yml  docs.yml  techstack.md  techstack.yml  vcpkg.json
.github/workflows/: build.yml  cmake.yml  docs.yml  hugo.yml
cmake/: CodeCoverage.cmake  DetectAmplitudeVersion.cmake  DetectCPUArchitecture.cmake  FindAmplitudeAudioSDK.cmake
docs/: README.md  config.toml  go.mod  go.sum  package.json  pnpm-lock.yaml
docs/content/: _index.md  features.md
docs/data/: docs-versions.yml
docs/i18n/: de.toml  en.toml  nl.toml
docs/layouts/: index.html  index.redirects
docs/static/: site.webmanifest
plugins/codec-flac/: CMakeLists.txt  Codec.cpp  Codec.h  Plugin.cpp  Plugin.h  vcpkg.json
plugins/codec-vorbis/: CMakeLists.txt  Codec.cpp  Codec.h  Plugin.cpp  Plugin.h  vcpkg.json
sample_project/: audio_config.json  pc.buses.json  pc.config.json  tests.config.json  tests.invalid.empty_pipeline.config.json  tests.invalid.failing_driver.config.json  tests.invalid.missing_child_bus.buses.json  tests.invalid.missing_child_bus.config.json  tests.invalid.missing_duck_bus.buses.json  tests.invalid.missing_duck_bus.config.json  tests.invalid.unknown_buses.config.json  tests.invalid.unknown_driver.config.json  tests.invalid.unset_driver.config.json  tests.invalid.wrong_master_bus.buses.json  tests.invalid.wrong_master_bus.config.json  tests.invalid.wrong_master_bus_id.buses.json  tests.invalid.wrong_master_bus_id.config.json  tests.invalid.wrong_master_bus_name.buses.json  tests.invalid.wrong_master_bus_name.config.json
sample_project/attenuators/: impact.json  pipe.json  room.json
sample_project/collections/: grass_footsteps.json  metal_footsteps.json  snow_footsteps.json  test_collection.json  throw_collection_1.json  throw_collection_2.json
sample_project/effects/: bassboost.json  equalizer.json  flanger.json  lpf.json  robotize.json
sample_project/events/: mute_bg_bus.json  play_throw.json  player_footstep.json  stop_throw.json
sample_project/pipelines/: default.json  stereo.json
sample_project/rtpc/: rtpc_player_height.json
sample_project/soundbanks/: sample_02.json  tests.init.json
sample_project/sounds/: throw_01.ogg.json  throw_02.ogg.json  throw_03.ogg.json  throw_04.ogg.json  throw_05.ogg.json  throw_06.ogg.json  throw_07.ogg.json  throw_08.ogg.json
sample_project/switch_containers/: footsteps.json
sample_project/switches/: env.json  surface_type.json
samples/: CMakeLists.txt
samples/rawassets/: audio_config.json  buses.json  pc.config.json
samples/sample_01/: CMakeLists.txt  main.cpp
samples/sample_02/: CMakeLists.txt  main.cpp
samples/sample_03/: CMakeLists.txt  main.c
schemas/: attenuation_definition.fbs  audio_config_definition.fbs  buses_definition.fbs  collection_definition.fbs  common.fbs  effect_definition.fbs  engine_config_definition.fbs  event_definition.fbs  pipeline_definition.fbs  rtpc_definition.fbs  sound_bank_definition.fbs  sound_collection_definition.fbs  sound_definition.fbs  switch_container_definition.fbs  switch_definition.fbs
scripts/: build_assets.py  build_project.py  build_schemas.py  clean_project.py  common.py
src/Ambisonics/: AmbisonicBinauralizer.cpp  AmbisonicBinauralizer.h  AmbisonicComponent.cpp  AmbisonicComponent.h  AmbisonicDecoder.cpp  AmbisonicDecoder.h  AmbisonicEntity.cpp  AmbisonicEntity.h  AmbisonicOrientationProcessor.cpp  AmbisonicOrientationProcessor.h  AmbisonicSource.cpp  AmbisonicSource.h  AmbisonicSpeaker.cpp  AmbisonicSpeaker.h  BFormat.cpp  BFormat.h
src/Convolution/: Convolver.cpp  TwoStageConvolver.cpp
src/Core/: Asset.cpp  Asset.h  AudioBuffer.cpp  AudioBufferCrossFader.cpp  AudioBufferCrossFader.h  Bus.cpp  BusInternalState.cpp  BusInternalState.h  Channel.cpp  ChannelInternalState.cpp  ChannelInternalState.h  Codec.cpp  Common.cpp  DefaultPlugins.h  Device.cpp  Driver.cpp  Engine.cpp  Engine.h  EngineInternalState.h  Entity.cpp  EntityInternalState.cpp  EntityInternalState.h  Environment.cpp  EnvironmentInternalState.cpp  EnvironmentInternalState.h  Event.cpp  Event.h  Fader.cpp  Listener.cpp  ListenerInternalState.cpp  ListenerInternalState.h  Log.cpp  Memory.cpp  MiniAudio.cpp  Room.cpp  RoomInternalState.cpp  RoomInternalState.h  Thread.cpp  Version.cpp
src/DSP/: AudioConverter.cpp  Convolver.cpp  Delay.cpp  Delay.h  FFT.cpp  Filter.cpp  Gain.cpp  Gain.h  NearFieldProcessor.cpp  NearFieldProcessor.h  ReflectionsProcessor.cpp  ReflectionsProcessor.h  Resampler.cpp  SplitComplex.cpp
src/HRTF/: HRIRSphere.cpp  HRIRSphere.h  HRTFContext.h
src/IO/: DiskFile.cpp  DiskFileSystem.cpp  File.cpp  File.h  FileLoader.cpp  FileSystem.cpp  MemoryFile.cpp  PackageFileSystem.cpp  PackageItemFile.cpp  Resource.cpp  Resource.h
src/Math/: BarycentricCoordinates.cpp  CartesianCoordinateSystem.cpp  Curve.cpp  FFT.cpp  FaceBSPTree.cpp  FaceBSPTree.h  Geometry.cpp  HMM_Impl.cpp  Orientation.cpp  PolarPosition.cpp  Shape.cpp  SphericalPosition.cpp  SplitComplex.cpp
src/Mixer/: Amplimix.cpp  Amplimix.h  Mixer.cpp  Mixer.h  Node.cpp  Pipeline.cpp  Pipeline.h  ProcessorPipeline.cpp  ProcessorPipeline.h  RealChannel.cpp  RealChannel.h  Resampler.cpp  SoundData.cpp  SoundData.h  SoundProcessor.cpp
src/Sound/: Attenuation.cpp  Attenuation.h  AttenuationShapes.cpp  AttenuationShapes.h  Collection.cpp  Collection.h  Effect.cpp  Effect.h  Fader.cpp  Filter.cpp  RefCounter.cpp  Rtpc.cpp  Rtpc.h  Scheduler.h  Sound.cpp  Sound.h  SoundBank.cpp  SoundCollection.cpp  SoundObject.cpp  SoundObject.h  Switch.cpp  Switch.h  SwitchContainer.cpp  SwitchContainer.h
src/Utils/: Utils.cpp  Utils.h  intrusive_list.h  stb_vorbis.c
tests/: CMakeLists.txt  common.cpp  engine.cpp  entity.cpp  environment.cpp  file.cpp  filesystem.cpp  listener.cpp  main.cpp  math.cpp  room.cpp  shape.cpp  thread.cpp  version.cpp  zone.cpp
tools/amac/: CMakeLists.txt  main.cpp
tools/amc/: CMakeLists.txt  main.cpp
tools/amir/: CMakeLists.txt  convhull_3d.h  main.cpp
tools/ampk/: CMakeLists.txt  main.cpp
(+475 files in other folders)
